tests/invalid/continue_outside_loop.wio
fn Entry(args: string[]) -> i32 {
    continue;
    return 0;
}
